--- a/saitae-web/src/main/webapp/pages/solicitudR.xhtml
+++ b/saitae-web/src/main/webapp/pages/solicitudR.xhtml
@@ -94,7 +94,7 @@
                             </p:inputTextarea>
 
                             <p:outputLabel for="tpr" value="Tipo de proyecto: "/>
-                            <p:selectOneMenu id="tpr" value="#{reservaSController.reserva.tipoPtoyecto}" 
+                            <p:selectOneMenu id="tpr" value="#{reservaSController.reserva.tipoProyecto}" 
                                              converter="omnifaces.SelectItemsConverter"
                                              required="true">
                                 <f:selectItem itemLabel="Seleccione" itemValue="#{null}" noSelectionOption="true"/>
