--- a/saitae-web/src/main/webapp/pages/solicitudRPP.xhtml
+++ b/saitae-web/src/main/webapp/pages/solicitudRPP.xhtml
@@ -1,14 +1,135 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
 
     <body>
 
         <ui:composition template="./../WEB-INF/template/plantilla1.xhtml">
 
             <ui:define name="content">
-                <h1 align="center">Solicitud de reserva de equipo para proyecto académico planificado</h1>
+                <h:form id="form">
+                    <h1 align="center">Solicitud de reserva de equipo para proyecto académico planificado</h1>
+                    <p:growl id="msgs" showDetail="true" />
+                    <p:wizard id="wd" flowListener="#{solicitudPPController.onFlowProcess}" 
+                              nextLabel="Siguiente" backLabel="Atrás">
+                        <p:tab id="general" title="Generalidades" >
+                            <p:panel header="Generalidades sobre la solicitud de reservas de equipo CRA.">
+                                <h:panelGrid columns="2" cellpadding="5">
+                                    <p:outputLabel for="tpp" value="Número de Jornadas: "/>
+                                    <p:selectOneMenu id="tpp" value="#{solicitudPPController.jornadas}" 
+                                                     required="true" style="width: 100%"
+                                                     converter="omnifaces.SelectItemsConverter">
+                                        <f:selectItem itemLabel="Seleccione" itemValue="0" noSelectionOption="true"/>
+                                        <f:selectItem itemLabel="Una sóla jornada" itemValue="1"/>
+                                        <f:selectItem itemLabel="Varias jornadas" itemValue="2"/>
+                                        <!--<p:ajax event="itemSelect" listener="# {reservaSController.tipoRecursoSelect}"
+                                                update=":form"/>-->
+                                    </p:selectOneMenu> 
+
+                                    <p:outputLabel for="nomp" value="Nombre del proyecto: "/>
+                                    <p:inputText id="nomp" value="#{solicitudPPController.proyecto.nombreProyecto}"
+                                                 required="true" style="width: 100%;"/>
+
+                                    <p:outputLabel for="benp" value="Beneficiarios: "/>
+                                    <p:inputTextarea id="benp" value="#{solicitudPPController.proyecto.beneficiarios}"
+                                                     required="true" cols="60" rows="5"/>
+
+                                    <p:outputLabel for="resp" value="Responsable: "/>
+                                    <h:outputText id="resp" value="#{solicitudPPController.responsable}"/>
+
+                                    <p:outputLabel for="durp" value="Duración: "/>
+                                    <p:inputText id="durp" value="#{solicitudPPController.proyecto.duracion}"
+                                                 required="true" style="width: 100%"/>
+                                </h:panelGrid>
+                            </p:panel>
+                        </p:tab>
+                        <p:tab id="diagnostico" title="Análisis">
+                            <p:panel header="Análisi del proyecto">
+                                <h:panelGrid columns="2" cellspacing="5">
+                                    <p:outputLabel for="diap" value="Diagnóstico"/>
+                                    <p:inputTextarea id="diap" value="#{solicitudPPController.proyecto.diagnostico}"
+                                                     required="true" cols="80" rows="5"/>
+
+                                    <p:outputLabel for="obgp" value="Objetivo general: "/>
+                                    <p:inputTextarea id="obgp" value="#{solicitudPPController.proyecto.objetivoGeneral}"
+                                                     required="true" cols="80" rows="1"/>
+
+                                    <p:outputLabel for="obep" value="Objetivo específico: "/>
+                                    <p:inputTextarea id="obep" value="#{solicitudPPController.proyecto.objetivoEspecifico}"
+                                                     required="true" cols="80" rows="1"/>
+
+                                    <p:outputLabel for="jusp" value="Diagnóstico"/>
+                                    <p:inputTextarea id="jusp" value="#{solicitudPPController.proyecto.justificacion}"
+                                                     required="true" cols="80" rows="5" 
+                                                     placeholder="Ingrese la justificación del proyecto"
+                                                     requiredMessage="Es necesario que ingrese su justificación antes de continuar"/>
+                                </h:panelGrid>
+                            </p:panel>
+                        </p:tab>
+                        <p:tab id="metodologia" title="Metodología">
+                            <p:panel header="Metodología a implementar en el proyecto">
+                                <h:panelGrid columns="2" cellspacing="5">
+                                    <p:outputLabel for="metp" value="Metodología: "/>
+                                    <p:inputTextarea id="metp" value="#{solicitudPPController.proyecto.metodologia}" 
+                                                     required="true" cols="80" rows="5"/>
+
+                                    <p:outputLabel for="actp" value="Actividades: "/>
+                                    <p:inputTextarea id="actp" value="#{solicitudPPController.proyecto.actividades}"
+                                                     required="true" cols="80" rows="5"/>
+                                </h:panelGrid>
+                            </p:panel>
+                        </p:tab>
+                        <p:tab id="calendar" title="Calendarización">
+                            <p:panel header="Planificación">
+                                <h:panelGrid columns="2" cellspacing="5">
+                                    <p:column/>
+                                    tabla
+                                </h:panelGrid>
+                            </p:panel>
+                        </p:tab>
+                        <p:tab id="recursos" title="Recursos">
+                            <p:panel header="Recursos">
+                                <h:panelGrid columns="2" cellspacing="5">            
+                                    <p:outputLabel for="rehp" value="Recursos humanos: "/>
+                                    <p:inputTextarea id="rehp" value="#{solicitudPPController.proyecto.recursoHumano}"
+                                                     required="true" cols="80" rows="5"/>
+
+                                    <p:outputLabel for="remp" value="Recursos materiales: "/>
+                                    <p:inputTextarea id="remp" value="#{solicitudPPController.proyecto.recursoMaterial}"
+                                                     required="true" cols="80" rows="5"/>
+
+                                    <p:outputLabel for="refp" value="Recursos financieros: "/>
+                                    <p:inputTextarea id="refp" value="#{solicitudPPController.proyecto.recursoFinanciero}"
+                                                     required="true" cols="80" rows="5"/>
+
+                                    <h3 align="justify">Recursos Del CRA a ocupar</h3>
+                                    tabla para el cra
+                                </h:panelGrid>
+                            </p:panel>
+                        </p:tab>                        
+                        <p:tab id="seguimiento" title="Evaluación">
+                            <p:panel header="Seguimiento y producto esperado del proyecto">
+                                <h:panelGrid columns="2" cellspacing="5">
+                                    <p:outputLabel for="digp" value="Seguimiento: "/>
+                                    <p:inputTextarea id="digp" value="#{solicitudPPController.proyecto.seguimiento}"
+                                                     required="true" cols="80" rows="5"/>
+
+                                    <p:outputLabel for="prep" value="Producto: "/>
+                                    <p:inputTextarea id="prep" value="#{solicitudPPController.proyecto.productoEsperado}"
+                                                     required="true" cols="80" rows="5"/>
+
+                                    <p:column/>
+                                    <p:commandButton id="Solicitar" value="Solicitar" update="form"
+                                                     actionListener="#{solicitudPPController.guardar()}"/>
+                                </h:panelGrid>
+                            </p:panel>
+                        </p:tab>
+                    </p:wizard>
+                </h:form>
             </ui:define>
 
         </ui:composition>
